# c_cpp_practice

./: .clang-format  .gitmodules  CMakeLIsts.txt  CMakeLists.txt  README.md  changelog.md
.chglog/: config.yml
.github/workflows/: codeql-analysis.yml  linux.yml  windows.yml
src/: CMakeLIsts.txt  CMakeLists.txt
src/alignment/: main.cpp
src/auto_test/: main.cpp
src/cache/: main.cpp  visualize.py
src/call_virtual_func_from_ctor/: main.cpp
src/common/: scope_guard.h  scope_timer.h  scope_trace.h  stopwatch.h
src/compare_set_and_sort_unique_vector/: main.cpp
src/compile_time_string_hash/: main.cpp
src/composition/: main.cpp
src/concepts/: main.cpp
src/constexpr_if/: main.cpp
src/construction/: main.cpp
src/copy_more_than_string/: main.cpp
src/coroutine/: hello_coroutine.cpp
src/coroutine_cpp20/: CMakeLists.txt  awaiter.cpp  hello_coroutine.cpp  resume.cpp  return_object.cpp  trace.hpp
src/coroutine_posix/: CMakeLists.txt  coroutine.h  main.cpp
src/destruction_order/: main.cpp
src/encoding/: main.cpp
src/encryption/: CMakeLists.txt  main.cpp
src/integer/: main.cpp
src/iterate/: main.cpp
src/linkage/: lib.cpp  liba.h  main.cpp
src/locale/: locale_list.py  main.cpp
src/mem_order/: main.cpp
src/mem_trace/: CMakeLists.txt  main.cpp  shared.cpp  shared.h  static.cpp  static.h
src/operator_overload/: main.cpp
src/parallel_algorithm/: main.cpp  parallel_for.h  parallel_reduce.h
src/pimpl/: foo.cpp  foo.h  main.cpp
src/pre_compiled_headers/: CMakeLists.txt  main.cpp  pch.h
src/print_tuple/: main.cpp
src/python_binding/: CMakeLists.txt  export.h  module.cpp  module.h  pybind.cpp  pymodule_ctypes.py
src/read_write_lock/: main.cpp  read_write_lock.cpp  read_write_lock.h
src/reference/: reference.cpp
src/rvo/: main.cpp
src/simd/: main.cpp
src/single_producer_consumer_queue/: main.cpp  producer_consumer_queue.hpp
src/singleton/: main.cpp
src/smart_ptr/: main.cpp
src/spin_lock/: main.cpp
src/std_algorithm/: CMakeLists.txt  reduce.cpp  reverse.cpp  rotate.cpp
src/std_async/: main.cpp
src/std_thread/: main.cpp
src/std_variant/: main.cpp
src/streambuf/: main.cpp
src/string_view/: main.cpp
src/template/: 2.class_template_argument_deduction.hpp  dispatch.hpp  main.cpp
src/test_framework/: main.cpp  ut.hpp
src/thread_pool/: main.cpp
src/thread_pool_work_stealing/: CMakeLists.txt  main.cpp  notification_queue.hpp  task_system.hpp
src/thread_safe_init_with_lambda/: main.cpp
src/view/: array_view.hpp  main.cpp
