get_filename_component(dir ${CMAKE_CURRENT_SOURCE_DIR} NAME)

file(GLOB entries *)
set(subdirs "")
foreach(entry ${entries})
  if(IS_DIRECTORY ${entry})
    list(APPEND subdirs ${entry})
  endif()
endforeach()

foreach(subdir ${subdirs})
  if(EXISTS ${subdir}/CMakeLists.txt)
    add_subdirectory(${subdir})
  else()
    file(GLOB srcs ${subdir}/*.cpp)
    if(srcs)
      get_filename_component(module ${subdir} NAME)
      add_executable(${module} ${srcs})
      add_test(${module}_test ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${module})
      target_include_directories(${module} PRIVATE ${CMAKE_SOURCE_DIR}/deps/fmt/include)
      target_include_directories(${module} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
    endif(srcs)
  endif()
endforeach()
